fix navigation button double borders

--- a/app/styles.css
+++ b/app/styles.css
@@ -67,17 +67,20 @@ a.button {
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid white;
-    border-top: 1px solid white;
 }
 
 .navButton {
     height: 100%;
     border-left: 1px solid white;
-    border-right: 1px solid white;
+
     width: 7em;
     font-size: 1.5em;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.navButton:last-child {
+    border-right: 1px solid white;
 }
